force-app/main/default/objects/Lead/fields/Nome_contato_comercial__c.field-meta.xml
<CustomField>
    <fullName>Nome_contato_comercial__c</fullName>
    <label>Nome contato comercial</label>
    <length>100</length>
    <type>Text</type>
</CustomField>