force-app/main/default/objects/Lead/fields/Nome_da_Mae_sg__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Mae_sg__c</fullName>
    <description>Nome da Mae para integração com o portal Siggo</description>
    <label>Nome da Mae</label>
    <length>50</length>
    <type>Text</type>
</CustomField>