force-app/main/default/objects/Lead/fields/Nome_gestor_responsavel__c.field-meta.xml
<CustomField>
    <fullName>Nome_gestor_responsavel__c</fullName>
    <label>Nome do gestor responsável</label>
    <length>255</length>
    <type>Text</type>
</CustomField>