force-app/main/default/objects/Lead/fields/Nome_perfil_proprietario__c.field-meta.xml
<CustomField>
    <fullName>Nome_perfil_proprietario__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do perfil do proprietário</label>
    <type>Text</type>
</CustomField>