force-app/main/default/objects/Lead/fields/Numero_cartao__c.field-meta.xml
<CustomField>
    <fullName>Numero_cartao__c</fullName>
    <label>Número do cartão</label>
    <length>20</length>
    <type>Text</type>
</CustomField>