force-app/main/default/objects/Lead/fields/Numero_endereco__c.field-meta.xml
<CustomField>
    <fullName>Numero_endereco__c</fullName>
    <label>Número endereço</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>