force-app/main/default/objects/Lead/fields/Numero_parcelas__c.field-meta.xml
<CustomField>
    <fullName>Numero_parcelas__c</fullName>
    <label>Número de parcelas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>