force-app/main/default/objects/Lead/fields/Numero_sg__c.field-meta.xml
<CustomField>
    <fullName>Numero_sg__c</fullName>
    <description>Numero Para integração portal Siggo</description>
    <label>Numero</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>