force-app/main/default/objects/Lead/fields/Origem_Lead_Agrupado__c.field-meta.xml
<CustomField>
    <fullName>Origem_Lead_Agrupado__c</fullName>
    <label>Origem do Lead Agrupado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ações MKT</fullName>
            </value>
            <value>
                <fullName>Ataque à base</fullName>
            </value>
            <value>
                <fullName>Ativo - Prospecção do TV</fullName>
            </value>
            <value>
                <fullName>Busca Google</fullName>
            </value>
            <value>
                <fullName>Canal Exclusivo de Indicações</fullName>
            </value>
            <value>
                <fullName>Chat Siggo</fullName>
            </value>
            <value>
                <fullName>E-commerce</fullName>
            </value>
            <value>
                <fullName>Email MKT</fullName>
            </value>
            <value>
                <fullName>Evento Feira ou convenção</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Formulário Home Siggo</fullName>
            </value>
            <value>
                <fullName>Fornecedor de Leads</fullName>
            </value>
            <value>
                <fullName>Frota Circulante - Executivo</fullName>
            </value>
            <value>
                <fullName>Indicação</fullName>
            </value>
            <value>
                <fullName>Indicação de Cliente MGM</fullName>
            </value>
            <value>
                <fullName>Indicador</fullName>
            </value>
            <value>
                <fullName>Indicador de Negócio</fullName>
            </value>
            <value>
                <fullName>Loja Michelin</fullName>
            </value>
            <value>
                <fullName>Mailing</fullName>
            </value>
            <value>
                <fullName>Michelin</fullName>
            </value>
            <value>
                <fullName>Mídia TV</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Parcerias</fullName>
            </value>
            <value>
                <fullName>Site Sascar</fullName>
            </value>
            <value>
                <fullName>Site Siggo</fullName>
            </value>
            <value>
                <fullName>Site Siggo Receptivo</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Totem Michelin</fullName>
            </value>
            <value>
                <fullName>You Tube</fullName>
            </value>
            <value>
                <fullName>Site Sascar Integrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>