force-app/main/default/objects/Lead/fields/Origem_via_Chat_sg__c.field-meta.xml
<CustomField>
    <fullName>Origem_via_Chat_sg__c</fullName>
    <description>Indicação da origem do cliente via Chat Siggo</description>
    <label>Origem via Chat</label>
    <length>50</length>
    <type>Text</type>
</CustomField>