force-app/main/default/objects/Lead/fields/Outra_origem__c.field-meta.xml
<CustomField>
    <fullName>Outra_origem__c</fullName>
    <label>Outra origem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>