force-app/main/default/objects/Lead/fields/Outro_concorrente__c.field-meta.xml
<CustomField>
    <fullName>Outro_concorrente__c</fullName>
    <label>Outro concorrente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>