force-app/main/default/objects/Lead/fields/Outro_meio__c.field-meta.xml
<CustomField>
    <fullName>Outro_meio__c</fullName>
    <label>Outro meio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>