force-app/main/default/objects/Lead/fields/Outro_motivo__c.field-meta.xml
<CustomField>
    <fullName>Outro_motivo__c</fullName>
    <label>Outro motivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>