force-app/main/default/objects/Lead/fields/Parceiro_Siggo__c.field-meta.xml
<CustomField>
    <fullName>Parceiro_Siggo__c</fullName>
    <description>Campo para integração da informação do Portale de Parceiros Siggo</description>
    <label>Parceiro Siggo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>