force-app/main/default/objects/Lead/fields/Pertenceu_a_fila__c.field-meta.xml
<CustomField>
    <fullName>Pertenceu_a_fila__c</fullName>
    <description>Identificador para lead que já tenha pertencido a alguma fila</description>
    <label>Pertenceu à fila</label>
    <length>30</length>
    <type>Text</type>
</CustomField>