force-app/main/default/objects/Lead/fields/Placa__c.field-meta.xml
<CustomField>
    <fullName>Placa__c</fullName>
    <label>Placa</label>
    <length>8</length>
    <type>Text</type>
</CustomField>