force-app/main/default/objects/Lead/fields/Possui_agregados__c.field-meta.xml
<CustomField>
    <fullName>Possui_agregados__c</fullName>
    <label>Possui agregados</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Sim</fullName>
                <default>true</default>
                <label>Sim</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>