force-app/main/default/objects/Lead/fields/Possui_Escolta_Armada__c.field-meta.xml
<CustomField>
    <fullName>Possui_Escolta_Armada__c</fullName>
    <label>Possui Escolta Armada ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NÃO</fullName>
            </value>
            <value>
                <fullName>SIM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>