force-app/main/default/objects/Lead/fields/PossuiAgradados__c.field-meta.xml
<CustomField>
    <fullName>PossuiAgradados__c</fullName>
    <label>Possui agregadados</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Não</fullName>
                <color>#0B6FCE</color>
                <label>Não</label>
            </value>
            <value>
                <fullName>Sim</fullName>
                <color>#78C953</color>
                <label>Sim</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>