force-app/main/default/objects/Lead/fields/Produtos_sg__c.field-meta.xml
<CustomField>
    <fullName>Produtos_sg__c</fullName>
    <description>Produtos campo para integração Siggo</description>
    <label>Produtos</label>
    <length>100</length>
    <type>Text</type>
</CustomField>