force-app/main/default/objects/Lead/fields/ProfissaoProprietarioLead__c.field-meta.xml
<CustomField>
    <fullName>ProfissaoProprietarioLead__c</fullName>
    <defaultValue>&quot;1921-Outras Profissões&quot;</defaultValue>
    <description>campo para preencher automaticamente a profissão na oportunidade com um valor default &quot;1921-Outras Profissões&quot;</description>
    <label>ProfissaoProprietarioLead</label>
    <length>25</length>
    <type>Text</type>
</CustomField>