force-app/main/default/objects/Lead/fields/Qual_empresa_esta_agregando__c.field-meta.xml
<CustomField>
    <fullName>Qual_empresa_esta_agregando__c</fullName>
    <label>Qual empresa está agregando ?</label>
    <type>TextArea</type>
</CustomField>