force-app/main/default/objects/Lead/fields/Quantidade_de_ve_culos__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_ve_culos__c</fullName>
    <label>Quantidade de veículos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>