force-app/main/default/objects/Lead/fields/Quantidade_ve_culos_leves__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_ve_culos_leves__c</fullName>
    <label>Quantidade veículos leves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>