force-app/main/default/objects/Lead/fields/Quantidade_veiculos_pesados__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_veiculos_pesados__c</fullName>
    <label>Quantidade veículos pesados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>