force-app/main/default/objects/Lead/fields/Regional__c.field-meta.xml
<CustomField>
    <fullName>Regional__c</fullName>
    <label>Regional</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>FRETEIRO</fullName>
            </value>
            <value>
                <fullName>KA</fullName>
            </value>
            <value>
                <fullName>MG-RJ-ES</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>RS</fullName>
            </value>
            <value>
                <fullName>SPC</fullName>
            </value>
            <value>
                <fullName>SPI</fullName>
            </value>
            <value>
                <fullName>TELEVENDAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>