force-app/main/default/objects/Lead/fields/RENAVAM_sg__c.field-meta.xml
<CustomField>
    <fullName>RENAVAM_sg__c</fullName>
    <description>Renavam  Para integração com portal Siggo</description>
    <label>RENAVAM</label>
    <length>11</length>
    <type>Text</type>
</CustomField>