force-app/main/default/objects/Lead/fields/Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Responsavel__c</fullName>
    <label>Responsável</label>
    <length>100</length>
    <type>Text</type>
</CustomField>