force-app/main/default/objects/Lead/fields/RG_sg__c.field-meta.xml
<CustomField>
    <fullName>RG_sg__c</fullName>
    <description>RG para Integração com portal Siggo</description>
    <label>RG</label>
    <length>9</length>
    <type>Text</type>
</CustomField>