force-app/main/default/objects/Lead/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <label>Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGRONEGÓCIOS / USINA</fullName>
            </value>
            <value>
                <fullName>ALIMENTÍCIA</fullName>
            </value>
            <value>
                <fullName>ALIMENTOS</fullName>
            </value>
            <value>
                <fullName>ASSOCIACAO</fullName>
            </value>
            <value>
                <fullName>AUTOMOTIVO</fullName>
            </value>
            <value>
                <fullName>AUTOPEÇAS E COMBUSTÍVEIS</fullName>
            </value>
            <value>
                <fullName>BEBIDAS</fullName>
            </value>
            <value>
                <fullName>BENS DE CONSUMO</fullName>
            </value>
            <value>
                <fullName>CALÇADOS</fullName>
            </value>
            <value>
                <fullName>CIGARRO</fullName>
            </value>
            <value>
                <fullName>COMÉRCIO</fullName>
            </value>
            <value>
                <fullName>CONSTRUÇÃO CIVIL</fullName>
            </value>
            <value>
                <fullName>DISTRIBUIDORA</fullName>
            </value>
            <value>
                <fullName>E-COMMERCE</fullName>
            </value>
            <value>
                <fullName>ELETROELETRÔNICOS</fullName>
            </value>
            <value>
                <fullName>ELETRÔNICO</fullName>
            </value>
            <value>
                <fullName>ESCOLAR</fullName>
            </value>
            <value>
                <fullName>EXTRAÇÃO DE MINÉRIO</fullName>
            </value>
            <value>
                <fullName>FARMACÊUTICOS</fullName>
            </value>
            <value>
                <fullName>FRACIONADO</fullName>
            </value>
            <value>
                <fullName>FRACIONADO ELETRÔNICO</fullName>
            </value>
            <value>
                <fullName>FRETEIRO</fullName>
            </value>
            <value>
                <fullName>FRIGORÍFICO</fullName>
            </value>
            <value>
                <fullName>FROTA</fullName>
            </value>
            <value>
                <fullName>GÁS</fullName>
            </value>
            <value>
                <fullName>INDÚSTRIA</fullName>
            </value>
            <value>
                <fullName>LINHA AMARELA</fullName>
            </value>
            <value>
                <fullName>LOCADORA</fullName>
            </value>
            <value>
                <fullName>MADEIREIRA</fullName>
            </value>
            <value>
                <fullName>MAQUINA/OUTROS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>