force-app/main/default/objects/Lead/fields/Sexo_sg__c.field-meta.xml
<CustomField>
    <fullName>Sexo_sg__c</fullName>
    <description>Sexo  para integração com o portal Siggo</description>
    <label>Sexo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>