force-app/main/default/objects/Lead/fields/Siggo_discador__c.field-meta.xml
<CustomField>
    <fullName>Siggo_discador__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Siggo discador</label>
    <type>Checkbox</type>
</CustomField>