force-app/main/default/objects/Lead/fields/Telefone_3__c.field-meta.xml
<CustomField>
    <fullName>Telefone_3__c</fullName>
    <label>Telefone 3</label>
    <type>Phone</type>
</CustomField>