force-app/main/default/objects/Lead/fields/Telefone_celular__c.field-meta.xml
<CustomField>
    <fullName>Telefone_celular__c</fullName>
    <label>Telefone celular</label>
    <type>Phone</type>
</CustomField>