force-app/main/default/objects/Lead/fields/Telefone_contato_comercial__c.field-meta.xml
<CustomField>
    <fullName>Telefone_contato_comercial__c</fullName>
    <label>Telefone contato comercial</label>
    <type>Phone</type>
</CustomField>