force-app/main/default/objects/Lead/fields/Telefone_gestor_responsavel__c.field-meta.xml
<CustomField>
    <fullName>Telefone_gestor_responsavel__c</fullName>
    <label>Telefone do gestor responsável</label>
    <length>255</length>
    <type>Text</type>
</CustomField>