force-app/main/default/objects/Lead/fields/Tem_ve_culos_leves__c.field-meta.xml
<CustomField>
    <fullName>Tem_ve_culos_leves__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tem veículos leves</label>
    <type>Checkbox</type>
</CustomField>