force-app/main/default/objects/Lead/fields/Tempo_de_Envio__c.field-meta.xml
<CustomField>
    <fullName>Tempo_de_Envio__c</fullName>
    <formula>IF(   
		(Enviado_Em__c - Criado_Em__c) &gt; 0 ,
		TEXT( FLOOR(Enviado_Em__c - Criado_Em__c) ) &amp; &quot; days &quot;
		&amp; TEXT( FLOOR( MOD( (Enviado_Em__c - Criado_Em__c) * 24, 24 ) ) ) &amp; &quot; hours &quot;
		&amp; TEXT( ROUND( MOD( (Enviado_Em__c - Criado_Em__c) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
		&quot;&quot;
)</formula>
    <label>Tempo de Envio</label>
    <type>Text</type>
</CustomField>