force-app/main/default/objects/Lead/fields/Tempo_para_finalizacao__c.field-meta.xml
<CustomField>
    <fullName>Tempo_para_finalizacao__c</fullName>
    <formula>IF((Finalizado_em__c - Trabalhado_em__c) &gt; 0  ,
TEXT( FLOOR(Finalizado_em__c - Trabalhado_em__c) ) &amp; &quot; days &quot; 
&amp; TEXT( FLOOR( MOD( (Finalizado_em__c - Trabalhado_em__c) * 24, 24 ) ) ) &amp; &quot; hours &quot; 
&amp; TEXT( ROUND( MOD( (Finalizado_em__c - Trabalhado_em__c) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;, 
&quot;&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo para finalização</label>
    <type>Text</type>
</CustomField>