force-app/main/default/objects/Lead/fields/Tempo_para_in_cio_do_trabalho2__c.field-meta.xml
<CustomField>
    <fullName>Tempo_para_in_cio_do_trabalho2__c</fullName>
    <formula>IF(

ISBLANK(Enviado_Em__c), 

Trabalhado_em__c - Criado_Em__c,
Trabalhado_em__c - Enviado_Em__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo para início do trabalho2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>