force-app/main/default/objects/Lead/fields/TEXT_FLOOR_Enviado_Em_c_Criado_Em_c__c.field-meta.xml
<CustomField>
    <fullName>TEXT_FLOOR_Enviado_Em_c_Criado_Em_c__c</fullName>
    <formula>TEXT( FLOOR(Tempo_para_in_cio_do_trabalho2__c) ) &amp; &quot; days &quot; 
&amp; TEXT( FLOOR( MOD( (Tempo_para_in_cio_do_trabalho2__c) * 24, 24 ) ) ) &amp; &quot; hours &quot; 
&amp; TEXT( ROUND( MOD( (Tempo_para_in_cio_do_trabalho2__c) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo para início do trabalho</label>
    <type>Text</type>
</CustomField>