force-app/main/default/objects/Lead/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cliente base</fullName>
            </value>
            <value>
                <fullName>Cliente indicador</fullName>
            </value>
            <value>
                <fullName>Embarcador</fullName>
            </value>
            <value>
                <fullName>Ex-Cliente</fullName>
            </value>
            <value>
                <fullName>Gerenciador de Risco</fullName>
            </value>
            <value>
                <fullName>Indicador</fullName>
            </value>
            <value>
                <fullName>Novo Cliente</fullName>
            </value>
            <value>
                <fullName>Novo parceiro</fullName>
            </value>
            <value>
                <fullName>Sinergia Michelin KA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>