force-app/main/default/objects/Lead/fields/Tipo_de_cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_cliente__c</fullName>
    <label>Tipo de cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cliente Base</fullName>
            </value>
            <value>
                <fullName>Novo Cliente</fullName>
            </value>
            <value>
                <fullName>Cliente Final</fullName>
            </value>
            <value>
                <fullName>Cliente indicador</fullName>
            </value>
            <value>
                <fullName>Embarcador</fullName>
            </value>
            <value>
                <fullName>Ex-Cliente</fullName>
            </value>
            <value>
                <fullName>Gerenciador de Risco</fullName>
            </value>
            <value>
                <fullName>Indicador</fullName>
            </value>
            <value>
                <fullName>Novo Parceiro</fullName>
            </value>
            <value>
                <fullName>Prestador de serviço</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Sinergia Michelin KA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>