force-app/main/default/objects/Lead/fields/Tipo_de_frota__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_frota__c</fullName>
    <label>Tipo de frota</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mista</fullName>
            </value>
            <value>
                <fullName>Própria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>