force-app/main/default/objects/Lead/fields/Tipo_de_pessoa__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_pessoa__c</fullName>
    <label>Tipo de pessoa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>J-Jurídica - MEI</fullName>
            </value>
            <value>
                <fullName>J-Jurídica - ME</fullName>
            </value>
            <value>
                <fullName>F-Física</fullName>
            </value>
            <value>
                <fullName>J-Jurídica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>