force-app/main/default/objects/Lead/fields/Tipo_de_registro_Conta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_registro_Conta__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de registro - Conta</label>
    <type>Text</type>
</CustomField>