force-app/main/default/objects/Lead/fields/Tipo_de_registro_Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_registro_Oportunidade__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de registro - Oportunidade</label>
    <type>Text</type>
</CustomField>