force-app/main/default/objects/Lead/fields/Tipo_de_ve_culo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_ve_culo__c</fullName>
    <label>Tipo de veículo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carro</fullName>
            </value>
            <value>
                <fullName>Moto</fullName>
            </value>
            <value>
                <fullName>Caminhão</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>