force-app/main/default/objects/Lead/fields/Trabalhado_em__c.field-meta.xml
<CustomField>
    <fullName>Trabalhado_em__c</fullName>
    <label>Trabalhado em</label>
    <type>DateTime</type>
</CustomField>