force-app/main/default/objects/Lead/fields/UF_sg__c.field-meta.xml
<CustomField>
    <fullName>UF_sg__c</fullName>
    <description>UF Para integração portal Siggo</description>
    <label>UF</label>
    <length>2</length>
    <type>Text</type>
</CustomField>