force-app/main/default/objects/Lead/fields/UltimaVezBotaoConversaoFoiAcionado__c.field-meta.xml
<CustomField>
    <fullName>UltimaVezBotaoConversaoFoiAcionado__c</fullName>
    <label>Ultima vez botão conversão foi acionado</label>
    <type>DateTime</type>
</CustomField>