force-app/main/default/objects/Lead/fields/Utiliza_concorrente__c.field-meta.xml
<CustomField>
    <fullName>Utiliza_concorrente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utiliza rastreador do concorrente</label>
    <type>Checkbox</type>
</CustomField>