force-app/main/default/objects/Lead/fields/Utiliza_o_do_Ve_culo_Lead__c.field-meta.xml
<CustomField>
    <fullName>Utiliza_o_do_Ve_culo_Lead__c</fullName>
    <defaultValue>&quot;2-Locomoção diária&quot;</defaultValue>
    <description>Campo para integração do Portal de Parceiros - para preenchimento doobjeto Veículo na Proposta</description>
    <label>Utilização do Veículo Lead</label>
    <length>50</length>
    <type>Text</type>
</CustomField>