force-app/main/default/objects/Lead/fields/Valor_de_Instalacao_sg__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_Instalacao_sg__c</fullName>
    <description>Valor de Instalação para integração com o portal Siggo</description>
    <label>Valor de Instalacao</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>