force-app/main/default/objects/Lead/fields/Vencimento_cartao_MMAA__c.field-meta.xml
<CustomField>
    <fullName>Vencimento_cartao_MMAA__c</fullName>
    <label>Vencimento do cartão (MMAA)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>