force-app/main/default/objects/Lead/fields/VerificaDuplicidade__c.field-meta.xml
<CustomField>
    <fullName>VerificaDuplicidade__c</fullName>
    <label>VerificaDuplicidade</label>
    <length>50</length>
    <type>Text</type>
</CustomField>