force-app/main/default/objects/Lead/recordTypes/Argentina.recordType-meta.xml
<RecordType>
    <fullName>Argentina</fullName>
    <active>true</active>
    <businessProcess>CORP</businessProcess>
    <label>Argentina</label>
</RecordType>