force-app/main/default/objects/Lead/recordTypes/Blue_tec.recordType-meta.xml
<RecordType>
    <fullName>Blue_tec</fullName>
    <active>true</active>
    <businessProcess>Blue tec</businessProcess>
    <label>Blue tec</label>
</RecordType>