force-app/main/default/objects/Lead/recordTypes/Cargo_Tracck.recordType-meta.xml
<RecordType>
    <fullName>Cargo_Tracck</fullName>
    <active>true</active>
    <businessProcess>Cargo Tracck</businessProcess>
    <label>Cargo Tracck</label>
</RecordType>