force-app/main/default/objects/Lead/recordTypes/CORP.recordType-meta.xml
<RecordType>
    <fullName>CORP</fullName>
    <active>true</active>
    <businessProcess>CORP</businessProcess>
    <label>CORP</label>
</RecordType>