force-app/main/default/objects/Lead/recordTypes/CORP_Executivo.recordType-meta.xml
<RecordType>
    <fullName>CORP_Executivo</fullName>
    <active>true</active>
    <businessProcess>CORP</businessProcess>
    <label>CORP - Executivo</label>
</RecordType>