force-app/main/default/objects/Lead/recordTypes/CORP_Televendas.recordType-meta.xml
<RecordType>
    <fullName>CORP_Televendas</fullName>
    <active>true</active>
    <businessProcess>CORP</businessProcess>
    <label>CORP - Televendas</label>
</RecordType>