force-app/main/default/objects/Lead/recordTypes/Freteiro.recordType-meta.xml
<RecordType>
    <fullName>Freteiro</fullName>
    <active>true</active>
    <businessProcess>Freteiro</businessProcess>
    <label>Freteiro</label>
</RecordType>