force-app/main/default/objects/Lead/recordTypes/Mercosul.recordType-meta.xml
<RecordType>
    <fullName>Mercosul</fullName>
    <active>true</active>
    <businessProcess>CORP</businessProcess>
    <label>Mercosul</label>
</RecordType>