force-app/main/default/objects/Lead/recordTypes/Michelin.recordType-meta.xml
<RecordType>
    <fullName>Michelin</fullName>
    <active>true</active>
    <businessProcess>Michelin</businessProcess>
    <description>Piloto Michelin</description>
    <label>Michelin</label>
</RecordType>