force-app/main/default/objects/Lead/recordTypes/Siggo.recordType-meta.xml
<RecordType>
    <fullName>Siggo</fullName>
    <active>true</active>
    <businessProcess>Siggo</businessProcess>
    <label>Siggo</label>
</RecordType>