force-app/main/default/objects/Lead/recordTypes/VERTICAIS.recordType-meta.xml
<RecordType>
    <fullName>VERTICAIS</fullName>
    <active>true</active>
    <businessProcess>CORP</businessProcess>
    <label>VERTICAIS</label>
</RecordType>