force-app/main/default/objects/Lead/validationRules/Alterar_origem_lead_siggo.validationRule-meta.xml
<ValidationRule>
    <fullName>Alterar_origem_lead_siggo</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
PRIORVALUE(LeadSource) &lt;&gt; null, 
ISCHANGED (LeadSource), 
AND(
OR( 
 $User.ProfileId = &#39;00e400000017cB4&#39;,
 $User.ProfileId = &#39;00e400000017cOX&#39;,
 $User.ProfileId = &#39;00e400000017Qdq&#39;,
 $User.ProfileId = &#39;00e400000017bl6&#39;,
 $User.ProfileId = &#39;00e40000001FZPW&#39;
) 
) 
)</errorConditionFormula>
    <errorMessage>Você não tem permissão de alterar a origem deste lead.</errorMessage>
</ValidationRule>