force-app/main/default/objects/Lead/validationRules/CargoTracck_Validar_CNPJ.validationRule-meta.xml
<ValidationRule>
    <fullName>CargoTracck_Validar_CNPJ</fullName>
    <active>true</active>
    <description>Cargo Tracck - Verifica se deve preencher o CNPJ.</description>
    <errorConditionFormula>AND( 
    IsConverted = true,
    RecordType.Name = &#39;Cargo Tracck&#39;, 
    ISPICKVAL(Tipo_de_pessoa__c, &#39;J-Jurídica&#39;), 
    ISBLANK(TRIM(CNPJ__c)) 
)</errorConditionFormula>
    <errorDisplayField>CNPJ__c</errorDisplayField>
    <errorMessage>Para pessoa jurídica, informe o CNPJ.</errorMessage>
</ValidationRule>