force-app/main/default/objects/Lead/validationRules/CargoTracck_Validar_CPF.validationRule-meta.xml
<ValidationRule>
    <fullName>CargoTracck_Validar_CPF</fullName>
    <active>true</active>
    <description>Cargo Tracck - Verifica se deve preencher o CPF.</description>
    <errorConditionFormula>AND( 
    RecordType.Name = &#39;Cargo Tracck&#39;, 
    ISPICKVAL(Tipo_de_pessoa__c, &#39;F-Física&#39;), 
    ISBLANK(TRIM(CPF__c)) 
)</errorConditionFormula>
    <errorDisplayField>CPF__c</errorDisplayField>
    <errorMessage>Para pessoa física, informe o CPF.</errorMessage>
</ValidationRule>