force-app/main/default/objects/Lead/validationRules/CEP.validationRule-meta.xml
<ValidationRule>
    <fullName>CEP</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 NOT ISNEW(),
 IsConverted = false,
AND(
OR 
( 
 NOT(ISNUMBER( PostalCode  )), 
 AND(ISNUMBER( PostalCode  ), LEN( PostalCode  ) &lt;&gt; 8) 
)))</errorConditionFormula>
    <errorMessage>CEP deve conter apenas 8 dígitos.</errorMessage>
</ValidationRule>