force-app/main/default/objects/Lead/validationRules/Conversao_CUIT_obrigatorio_Argentina.validationRule-meta.xml
<ValidationRule>
    <fullName>Conversao_CUIT_obrigatorio_Argentina</fullName>
    <active>true</active>
    <description>CUIT obrigatorio na conversão do Lead da Argentina</description>
    <errorConditionFormula>AND(
RecordType.Name = &#39;Mercosul&#39;,
OR(
Country = &#39;Argentina&#39;,
CONTAINS(Owner:User.Profile.Name, &#39;Argentina&#39;) 
),
IsConverted = true, 
OR(
ISBLANK(TRIM(CUIT__c)),
ISNULL(TRIM(CUIT__c))
)
)</errorConditionFormula>
    <errorDisplayField>CUIT__c</errorDisplayField>
    <errorMessage>Obrigatorio preencher o CUIT para converter o Lead</errorMessage>
</ValidationRule>